{inc} On horizontal resize, we don't correctly resize block with box-sizing: content-box, percentage width, and percentage padding
Categories
(Core :: Layout, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox94 | --- | verified |
People
(Reporter: TYLin, Assigned: TYLin)
References
Details
Attachments
(2 files, 1 obsolete file)
While working on bug 1700580, I discover an invalidation issue where we don't trigger reflow for a block with box-sizing: content-box, percentage width, and percentage padding if we change its container's width.
See the attached testcase.
| Comment hidden (obsolete) |
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
|
||
We store this new bit in nsIFrame instead of in ReflowInput to record a
change to padding (inspired by the mHasBSizeChange bit). That is because
we may construct a ReflowInput more than one time before reflowing the
frame. The first construction of ReflowInput (in
SizeComputationInput::InitOffsets will update
nsIFrame::UsedPaddingProperty() using the latest style data, so
we cannot determine the padding change in any of the subsequent
construction of ReflowInput.
dynamic-change-inline-size-001.html is the scenario fixed by bug
1307853.
dynamic-change-inline-size-002.html is equivalent to 001.html except
it's written with "box-sizing:content". It is fixed by this patch.
dynamic-change-inline-size-003.html is adapted from testcase 2 in bug
1729122 comment 4.
Updated•4 years ago
|
Comment 4•4 years ago
|
||
| bugherder | ||
Updated•4 years ago
|
Comment 8•4 years ago
|
||
Confirmed issue with 94.0a1 (2021-09-20) on Win10.
Fix verified with 95.0a1 (2021-10-06) and 94.0b2 on Win10 and Ubuntu 16x32.
Comment 9•4 years ago
|
||
Based on Comment 8, I'm marking this issue as Verified Fixed.
Description
•